Mon Oct 27 19:56:12 2003  Tim Janik  <timj@gtk.org>

	* sfifilecrawler.[hc]: added sfi_make_dirpath() to create directories
	possibly containing ~, ~user or non-existant parent directories.

Sun Oct 26 09:33:46 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.cc: Take notice of strings within preprocessor and
	ignore comments within them.

	* testidl.idl: Added test code for new string handling code.

Sat Oct 25 17:28:02 2003  Tim Janik  <timj@gtk.org>

	* sfistore.[hc]: implement sfi_rstore_quick_scan() to scan lisp syntax
	for a specific statement.

Sat Oct 25 01:49:50 2003  Tim Janik  <timj@gtk.org>

        * *.*: changed "copyright" field of procedures, scripts and objects
        into a "license" field which better reflects what we're asking for.

Sat Oct 18 04:59:35 2003  Tim Janik  <timj@gtk.org>

	* sfiustore.[hc]: added pointer pool.

Mon Oct 13 12:29:48 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.[hc]: added convenience functions g_quark_intern()
	and g_quark_intern_static() which return the constant quark
	string stored in glib for a given string.

Sun Oct 12 16:37:29 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.[hc]: added g_path_concat() to concatenate
	paths without extra searchpath seperators.

	* sfifilecrawler.[hc]: fixed home directory parsing (~user/)
	not working.
	added file_pattern to sfi_file_crawler_add_search_path().
	added sfi_file_crawler_add_tests()
	to filter matches by additional file tests.
	added sfi_file_crawler_list_files() wich blocks until all files
	are found and tested for a given search path.
	quickly imlpemented g_file_test_all() as g_file_test() just has
	too sick semantics to be usable.

Sun Oct 12 00:52:58 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.[hc]: implemented g_option_check() which checks
	for an option string in a colon seperated options list.

	* sfidl-options.cc: disable Constants code generation, this just
	produces potential conflicts and should be resolved upon idl file